Updated updating products. Added missing translations. Extended README.

--- a/frontend/src/locales/pl.json
+++ b/frontend/src/locales/pl.json
@@ -78,8 +78,10 @@
     "error": "Bład produktu",
     "edit": "Edytuj",
     "delete": "Usuń",
+    "deleted": "Produkt został usunięty",
     "add": "Dodaj",
     "added": "Produkt został dodany do koszyka",
+    "update": "Zaktualizuj",
     "delete_require_comments_remove": "You can't delete the product because it has comments",
     "name_en": "Nazwa po angielsku",
     "name_pl": "Nazwa po polsku",
