--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -81,6 +81,7 @@
     "deleted": "Product deleted",
     "add": "Add",
     "added": "Product added to cart",
+    "update": "Zaktualizuj",
     "delete_require_comments_remove": "You can't delete the product because it has comments",
     "name_en": "Name in English",
     "name_pl": "Name in Polish",
